name:                http-lesson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Unregistry/http-lesson#readme
license:             BSD3
license-file:        LICENSE
author:              Marat Khalitov
maintainer:          marat540@hotmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable http-lesson
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Json
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , http-conduit
                       , http-types
                       , text
                       , aeson
